# pico-synth

./: .gitignore  README.md  pico synth.md
kicad/amp/: amp.kicad_pcb  amp.kicad_prl  amp.kicad_pro  amp.kicad_sch  fp-info-cache
kicad/controller/: controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
kicad/controller/Library.pretty/: SOIC18-W_MC_MCH-L.kicad_mod  SOIC18-W_MC_MCH-M.kicad_mod  SOIC18-W_MC_MCH.kicad_mod  SW_1825910-6-4.kicad_mod
kicad/synth/: fp-info-cache  synth.kicad_pcb  synth.kicad_prl  synth.kicad_pro  synth.kicad_sch
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  main.c  mcp3008.c  mcp3008.h
src/synth/: CMakeLists.txt  main.c  test.h  test_interp.h  tusb_config.h  usb_descriptors.c
src/synth/include/: audiocontext.h  circularbuffer.h  controller.h  delay.h  envelope.h  filter.h  fixedpoint.h  ledblink.h  mcp3008.h  metronome.h  midi.h  noise.h  pitchtable.h  tempo.h  waveform.h
src/synth/lib/: circularbuffer.c  controller.c  delay.c  envelope.c  filter.c  mcp3008.c  midi.c  pitchtable.c  tempo.c  waveform.c
